Adds WS client, it gets data from url as json object.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,10 @@
 
     <uses-sdk
         android:minSdkVersion="14"
-        android:targetSdkVersion="19" />
+        android:targetSdkVersion="20" />
+    
+    <!-- Internet Permission -->
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
